Update payment-bulk-processing.md